SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/Industry_Segment_Data__c.object-meta.xml
<CustomObject>
    <description>SSP-288/SS2-T66 : Created New Object - Industry Segment Data</description>
    <label>Industry Segment Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Segment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>