SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>SSP-288/SS2-T66 : Created this field for storing Industry Segment Codes</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>