SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/fields/Hierarchy_Info__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Info__c</fullName>
    <description>Created this field for storing Industry Segment Hierarchy Info</description>
    <label>Hierarchy Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>