SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>SSP-288/SS2-T66 : Created this field for storing Industry Segment Level</description>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Business Unit</fullName>
            </value>
            <value>
                <fullName>Reporting Sub Group</fullName>
            </value>
            <value>
                <fullName>Industry Segment</fullName>
            </value>
            <value>
                <fullName>Market Segment</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>