SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-288/SS2-T66 : Created this field for storing Industry Segment Parent</description>
    <label>Parent</label>
    <referenceTo>Industry_Segment_Data__c</referenceTo>
    <relationshipLabel>Industry Segment Data</relationshipLabel>
    <relationshipName>Industry_Segments_Data</relationshipName>
    <type>Lookup</type>
</CustomField>