SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Level__c</columns>
    <columns>Parent__c</columns>
    <columns>Hierarchy_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>