SynProdGITV1/force-app/main/default/objects/Industry_Segment_Data__c/listViews/Aplication.listView-meta.xml
<ListView>
    <fullName>Aplication</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Level__c</columns>
    <columns>Parent__c</columns>
    <columns>Hierarchy_Info__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Application</value>
    </filters>
    <label>Aplication</label>
</ListView>